@@ -1,3 +1,12 @@
+2009-07-16  Roland McGrath  <roland@redhat.com>
+
+	* dwarf.h: Add DW_OP_{implicit,stack}_value from DWARF 4 draft.
+	Also DW_TAG_type_unit and DW_TAG_rvalue_reference_type.
+	Also DW_AT_signature, DW_AT_main_subprogram, DW_AT_data_bit_offset,
+	and DW_AT_const_expr.
+	Also DW_FORM_sec_offset, DW_FORM_exprloc, DW_FORM_flag_present,
+	and DW_FORM_ref_sig8.
+
 2009-07-15  Roland McGrath  <roland@redhat.com>
 
 	* dwarf_getlocation.c: Grok DW_OP_form_tls_address,
